--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Hendrik-Ido-Ambacht, Netherlands" />
         <meta name="viewport" content="width=400, initial-scale=1, maximum-scale=1">
         
-        <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" />
+        <link rel="stylesheet" href="/css/style.css" type="text/css" />
     </head>
     <body>
         <div class="content">
