New blog is live!

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="https://twitter.com/vincent_bitter" target="_blank" title="Follow me on Twitter"><img src="/img/tweet.png" alt="Twitter" width="48" height="48" /></a>
                 <a href="https://facebook.com/vincentbitter" target="_blank" title="Find me on Facebook"><img src="/img/facebook.png" alt="Facebook" width="48" height="48" /></a>
                 <a href="https://www.linkedin.com/pub/vincent-bitter/21/b7a/759" target="_blank" title="View my profile on LinkedIn"><img src="/img/linkedin.png" alt="LinkedIn" width="48" height="48" /></a>
-                <a href="http://blog.maxiblue.nl" target="_blank" title="Read my blog"><img src="/img/wordpress.png" alt="Blog" width="48" height="48" /></a>
+                <a href="https://blog.vincentbitter.nl" target="_blank" title="Read my blog"><img src="/img/wordpress.png" alt="Blog" width="48" height="48" /></a>
             </div>
         </div>
     </body>
