--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
         <meta charset="utf-8">
         <title>Vincent Bitter</title>
         <meta name="author" content="Vincent Bitter" />
-        <meta name="description" content="Hendrik-Ido-Ambacht, Netherlands" />
-        <meta name="viewport" content="width=400, initial-scale=1, maximum-scale=1">
+        <meta name="description" content="Website of Vincent Bitter" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <link rel="stylesheet" href="/css/style.css" type="text/css" />
+        <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
+        <div class="header">
+            <h1><img src="img/vincentbitter.png"></h1>
+        </div>
         <div class="content">
-            <h1>Vincent Bitter</h1>
-            <h2>Hendrik-Ido-Ambacht, Netherlands</h2>
-            <div class="socialmedia">
-                <a href="https://twitter.com/vincent_bitter" target="_blank" title="Follow me on Twitter"><img src="/img/tweet.png" alt="Twitter" width="48" height="48" /></a>
-                <a href="https://facebook.com/vincentbitter" target="_blank" title="Find me on Facebook"><img src="/img/facebook.png" alt="Facebook" width="48" height="48" /></a>
-                <a href="https://www.linkedin.com/pub/vincent-bitter/21/b7a/759" target="_blank" title="View my profile on LinkedIn"><img src="/img/linkedin.png" alt="LinkedIn" width="48" height="48" /></a>
-                <a href="https://blog.vincentbitter.nl" target="_blank" title="Read my blog"><img src="/img/wordpress.png" alt="Blog" width="48" height="48" /></a>
-            </div>
+            <ul class="socialmedia">
+                <li><a href="https://www.linkedin.com/pub/vincent-bitter/21/b7a/759" target="_blank" title="View my profile on LinkedIn"><img src="img/linkedin.png" alt="LinkedIn" /></a></li>
+                <li><a href="https://blog.vincentbitter.nl" target="_blank" title="Read my blog"><img src="img/blog.png" alt="Blog" /></a></li>
+                <li><a href="https://github.com/vincentbitter" target="_blank" title="Check my code on GitHub"><img src="img/github.png" alt="GitHub" /></a></li>
+                <li><a href="https://twitter.com/vincent_bitter" target="_blank" title="Follow me on Twitter"><img src="img/twitter.png" alt="Twitter" /></a></li>
+                <li><a href="https://facebook.com/vincentbitter" target="_blank" title="Find me on Facebook"><img src="img/facebook.png" alt="Facebook" /></a></li>
+            </ul>
         </div>
     </body>
 </html>
